<resources>
    <string name="app_name">Biezpieczny Notatnik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">description</string>
    <string name="add_new_tasks">Add new note</string>
    <string name="clear_the_list">Clear the list</string>
    <string name="dodac">Add</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_the_password">Change the password</string>
    <string name="type_the_note">Type the note</string>
    <string name="set_the_password">Set the password</string>
    <string name="you_need_to_set_up_the_password">You need to set up the password!</string>
</resources>