<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="change"
            type="com.example.tasklist.ChangePass" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:elevation="0dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/signin_signup_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/change_the_password"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/password_old"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_lock_light_blue_24dp"
                            android:drawablePadding="16dp"
                            android:hint="@string/old_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/password_new"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_lock_light_blue_24dp"
                            android:drawablePadding="16dp"
                            android:hint="@string/new_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/signin_signup_btn"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="@{() -> change.goToList()}"
                        android:background="@drawable/buttonshape"
                        android:drawableStart="@drawable/ic_touch_app_white_24dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/change_password"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</layout>